--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
@@ -36,19 +37,31 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.17",
+    "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "formik": "^2.4.6",
+    "googleapis": "^148.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.503.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.0",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.3",
@@ -56,6 +69,7 @@
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
+    "yup": "^1.6.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
