--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
+    "stream": "^0.0.3",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
