--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sonner": "^2.0.3",
     "stream": "^0.0.3",
     "swiper": "^11.2.6",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
     "yup": "^1.6.1",
@@ -82,8 +83,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
