--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@react-google-maps/api": "^2.20.6",
     "@tiptap/extension-color": "^2.11.9",
     "@tiptap/react": "^2.11.9",
     "@tiptap/starter-kit": "^2.11.9",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/leaflet": "^1.9.17",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
@@ -52,9 +54,11 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.11.0",
     "googleapis": "^148.0.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.0",
@@ -69,6 +73,7 @@
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
@@ -82,6 +87,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
